Fix bootstrap breaking svg alignment

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -217,7 +217,6 @@ pre {
     height: 16px;
     display: inline-block;
     fill: #{$grey-color};
-    padding-right: 5px;
     vertical-align: text-top;
 }
 
